[package]
name = "bibfmt"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-minimal-protocol = { path = "wmp" }
biblatex = "0.12"
serde = { version = "1", features = ["derive"] }
serde_cbor = "0.10"

[profile.release]
lto = true
strip = true
opt-level = 3
codegen-units = 1
panic = "abort"

# standalone: do not get absorbed into any parent workspace
[workspace]
